<resources>
    <string name="app_name">metro</string>
    <string name="title_underground">Метро</string>
    <string name="title_city">Город</string>
    <string name="title_profile">Кабинет</string>
    <string name="title_news">Новости</string>
    <string name="title_more">Ещё</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
